# llm-research

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE.md.backup  README.md  pyproject.toml  pyrightconfig.json
examples/: README_NLA.md  _emb_artifacts.py  _jspace_paths.py  _jspace_pursuit.py  _layer_hooks.py  _nla_artifacts.py  emb_audit_findings.py  emb_capture.py  emb_category_render.py  emb_category_stats.py  emb_data_manifest.py  emb_de_cosine_check.py  emb_fullvocab_analyze.py  emb_fullvocab_render.py  emb_fullvocab_stats.py  emb_global_render.py  emb_neighbors_report.py  emb_pair_directions.py  emb_pairs_render.py  emb_pca_map_render.py  emb_structural_block.py  emb_structural_block_render.py  emb_token_battery.py  emb_trace_analyze.py  emb_trace_attention.py  emb_trace_attention_analyze.py  emb_trace_attention_render.py  emb_trace_capture.py  emb_trace_components.py  emb_trace_corpus.py  emb_trace_render.py  jspace_atom_norm_bias.py  jspace_audit_findings.py  jspace_data_manifest.py  jspace_entailed_swap.py  jspace_fit_lens.py  jspace_freeze_c4_corpus.py  jspace_lens_eval.py  jspace_nla_crosstie.py  jspace_paper_metric_varfrac.py  (+60 more)
research/: ARC_PROCESS.md  README.md
research/archive/: 2026-04-09-attention-ablation-possessive-collapse.md  2026-04-09-layer19-factual-vs-linguistic-coherence.md  2026-04-11-logit-lens-tinyllama-initial.md  README.md
research/observations/: README.md
theory/: README.md
theory/kb/: README.md  glossary.md
theory/plans/: 2026-05-03-landscape-sweep-findings.md  2026-05-04-kb-build-review.md  2026-05-04-latex-series-brainstorm.md  (+2 more)
(+528 files in other folders)
